changed editor position to relative to avoid bottom whitespace when revisions are revealed

--- a/css/Draft.css
+++ b/css/Draft.css
@@ -51,7 +51,7 @@ html {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: relative;
   top: 0;
   left: 50%;
   transform: translate(-50%);
